--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
       </nav>
     </header>
 
+    <section id="welcome">
+      <div class="img-bus">
+        <img src="img/fun-bus.jpg">
+      </div>
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure Wordpress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+  </section>
 
     <section class="content-section">
       <div class="text-content">
@@ -79,12 +86,13 @@
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
         <div class="btn">Sign Me Up!</div>
       </div>
-    </section>
+    </section>  
+    <footer class="footer">
+    <p>Copyright Fun Bus 2018</p>
+    </footer>
   </div><!-- container -->
 
-  <footer class="footer">
-    <p>Copyright Fun Bus 2018</p>
-  </footer>
+
 
 </body>
 </html>
